[package]
name = "CrabChain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
ed25519-dalek = { version = "2.1.1", features = ["rand_core","serde"] }
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10.9"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.7.5"
